--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,11 @@
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <header>
-        <h1>{% block header %}School Data Explorer{% endblock %}</h1>
-    </header>
 
     <main>
+        <header>
+            <h1>School Data Explorer</h1>
+        </header>
         {% block content %}
         {% endblock %}
     </main>
