--- a/static/styles.css
+++ b/static/styles.css
@@ -81,6 +81,12 @@ dialog button {
     width: 100%;
 }
 
+input {
+    border: 3px solid black;
+    border-radius: 0px;
+    padding: .4rem;
+}
+
 #query {
     border: 3px solid black;
     padding: .5rem;
@@ -104,4 +110,10 @@ dialog button {
     display: flex;
     flex-direction: row-reverse;
     gap: 1rem;
+}
+
+.nav-group {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
 }
