--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
 <body>
 
     <main>
+        <div class="nav-group">
+            <a href="/">home</a>
+            <a href="/find-schools">find schools</a>
+        </div>
         <header>
             <h1>School Data Explorer</h1>
         </header>
